--- a/index.html
+++ b/index.html
@@ -8,7 +8,49 @@
     <title>Calculator</title>
 </head>
 <body>
-    
+    <div class="header">
+        <h1 class="title">BASIC CALCULATOR</h1>
+    </div>
+    <div class="calculatorFrame">
+        <div class="window">
+            <div class="window-result"></div>
+            <div class="window-currentOperator"></div>
+        </div>
+        <div class="buttons">
+            <div class="buttonRows">
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+            </div>
+            <div class="buttonRows">
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+            </div>
+            <div class="buttonRows">
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+            </div>
+            <div class="buttonRows">
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+            </div>
+            <div class="threeButtonsRow">
+                <button></button>
+                <button></button>
+                <button></button>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <h4 class="copyright">Copyright &copy; Sara :) 2022</h4>
+    </div>
 </body>
 <script type="text/javascript" src="./javascript/doStuff.js"></script>
 </html>
