--- a/index.html
+++ b/index.html
@@ -18,33 +18,33 @@
         </div>
         <div class="buttons">
             <div class="buttonRows">
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
+                <button class="AC"></button>
+                <button class="+/-"></button>
+                <button class="%"></button>
+                <button class="/"></button>
             </div>
             <div class="buttonRows">
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
+                <button class="7"></button>
+                <button class="8"></button>
+                <button class="9"></button>
+                <button class="*"></button>
             </div>
             <div class="buttonRows">
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
+                <button class="4"></button>
+                <button class="5"></button>
+                <button class="6"></button>
+                <button class="-"></button>
             </div>
             <div class="buttonRows">
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
+                <button class="1"></button>
+                <button class="2"></button>
+                <button class="3"></button>
+                <button class="+"></button>
             </div>
             <div class="threeButtonsRow">
-                <button></button>
-                <button></button>
-                <button></button>
+                <button class="0"></button>
+                <button class=","></button>
+                <button class="="></button>
             </div>
         </div>
     </div>
