--- a/index.html
+++ b/index.html
@@ -18,33 +18,33 @@
         </div>
         <div class="buttons">
             <div class="buttonRows">
-                <button class="AC"></button>
-                <button class="+/-"></button>
-                <button class="%"></button>
-                <button class="/"></button>
+                <button id="AC" class="lightGray"></button>
+                <button id="plusMinus" class="lightGray"></button>
+                <button id="modulo" class="lightGray"></button>
+                <button id="divide" class="yellow"></button>
             </div>
             <div class="buttonRows">
-                <button class="7"></button>
-                <button class="8"></button>
-                <button class="9"></button>
-                <button class="*"></button>
+                <button id="seven" class="darkGray"></button>
+                <button id="eight" class="darkGray"></button>
+                <button id="nine" class="darkGray"></button>
+                <button id="multiply" class="yellow"></button>
             </div>
             <div class="buttonRows">
-                <button class="4"></button>
-                <button class="5"></button>
-                <button class="6"></button>
-                <button class="-"></button>
+                <button id="four" class= "darkGray"></button>
+                <button id="five" class= "darkGray"></button>
+                <button id="six" class= "darkGray"></button>
+                <button id="minus" class="yellow"></button>
             </div>
             <div class="buttonRows">
-                <button class="1"></button>
-                <button class="2"></button>
-                <button class="3"></button>
-                <button class="+"></button>
+                <button id="one" class="darkGray"></button>
+                <button id="two" class="darkGray"></button>
+                <button id="three" class="darkGray"></button>
+                <button id="plus" class="yellow"></button>
             </div>
             <div class="threeButtonsRow">
-                <button class="0"></button>
-                <button class=","></button>
-                <button class="="></button>
+                <button id="zero" class="darkGray"></button>
+                <button id="comma" class="darkGray"></button>
+                <button id="equals" class="yellow"></button>
             </div>
         </div>
     </div>
