--- a/index.html
+++ b/index.html
@@ -18,33 +18,33 @@
         </div>
         <div class="buttons">
             <div class="buttonRows">
-                <button id="AC" class="lightGray"></button>
-                <button id="plusMinus" class="lightGray"></button>
-                <button id="modulo" class="lightGray"></button>
-                <button id="divide" class="yellow"></button>
+                <button id="AC" class="lightGray">AC</button>
+                <button id="plusMinus" class="lightGray">+/-</button>
+                <button id="modulo" class="lightGray">%</button>
+                <button id="divide" class="yellow">&#247</button>
             </div>
             <div class="buttonRows">
-                <button id="seven" class="darkGray"></button>
-                <button id="eight" class="darkGray"></button>
-                <button id="nine" class="darkGray"></button>
-                <button id="multiply" class="yellow"></button>
+                <button id="seven" class="darkGray">7</button>
+                <button id="eight" class="darkGray">8</button>
+                <button id="nine" class="darkGray">9</button>
+                <button id="multiply" class="yellow">x</button>
             </div>
             <div class="buttonRows">
-                <button id="four" class= "darkGray"></button>
-                <button id="five" class= "darkGray"></button>
-                <button id="six" class= "darkGray"></button>
-                <button id="minus" class="yellow"></button>
+                <button id="four" class= "darkGray">4</button>
+                <button id="five" class= "darkGray">5</button>
+                <button id="six" class= "darkGray">6</button>
+                <button id="minus" class="yellow">-</button>
             </div>
             <div class="buttonRows">
-                <button id="one" class="darkGray"></button>
-                <button id="two" class="darkGray"></button>
-                <button id="three" class="darkGray"></button>
-                <button id="plus" class="yellow"></button>
+                <button id="one" class="darkGray">1</button>
+                <button id="two" class="darkGray">2</button>
+                <button id="three" class="darkGray">3</button>
+                <button id="plus" class="yellow">+</button>
             </div>
             <div class="threeButtonsRow">
-                <button id="zero" class="darkGray"></button>
-                <button id="comma" class="darkGray"></button>
-                <button id="equals" class="yellow"></button>
+                <button id="zero" class="darkGray">0</button>
+                <button id="comma" class="darkGray">.</button>
+                <button id="equals" class="yellow">=</button>
             </div>
         </div>
     </div>
