--- a/index.html
+++ b/index.html
@@ -14,37 +14,37 @@
     <div class="calculatorFrame">
         <div class="window">
             <div class="window-result"></div>
-            <div class="window-currentOperator"></div>
+            <div class="window-currentOperator" placeholder="0"></div>
         </div>
         <div class="buttons">
             <div class="buttonRows">
-                <button id="AC" class="lightGray">AC</button>
-                <button id="plusMinus" class="lightGray">+/-</button>
-                <button id="modulo" class="lightGray">%</button>
-                <button id="divide" class="yellow">&#247</button>
+                <button id="AC" class="lightGray clear">AC</button>
+                <button id="plusMinus" class="lightGray operator">+/-</button>
+                <button id="modulo" class="lightGray operator">%</button>
+                <button id="divide" class="yellow operator">&#247</button>
             </div>
             <div class="buttonRows">
-                <button id="seven" class="darkGray">7</button>
-                <button id="eight" class="darkGray">8</button>
-                <button id="nine" class="darkGray">9</button>
-                <button id="multiply" class="yellow">x</button>
+                <button id="seven" class="darkGray decimal">7</button>
+                <button id="eight" class="darkGray decimal">8</button>
+                <button id="nine" class="darkGray decimal">9</button>
+                <button id="multiply" class="yellow operator">x</button>
             </div>
             <div class="buttonRows">
-                <button id="four" class= "darkGray">4</button>
-                <button id="five" class= "darkGray">5</button>
-                <button id="six" class= "darkGray">6</button>
-                <button id="minus" class="yellow">-</button>
+                <button id="four" class= "darkGray decimal">4</button>
+                <button id="five" class= "darkGray decimal">5</button>
+                <button id="six" class= "darkGray decimal">6</button>
+                <button id="minus" class="yellow operator">-</button>
             </div>
             <div class="buttonRows">
-                <button id="one" class="darkGray">1</button>
-                <button id="two" class="darkGray">2</button>
-                <button id="three" class="darkGray">3</button>
-                <button id="plus" class="yellow">+</button>
+                <button id="one" class="darkGray decimal">1</button>
+                <button id="two" class="darkGray decimal">2</button>
+                <button id="three" class="darkGray decimal">3</button>
+                <button id="plus" class="yellow operator">+</button>
             </div>
             <div class="threeButtonsRow">
-                <button id="zero" class="darkGray">0</button>
-                <button id="comma" class="darkGray">.</button>
-                <button id="equals" class="yellow">=</button>
+                <button id="zero" class="darkGray decimal">0</button>
+                <button id="comma" class="darkGray comma">.</button>
+                <button id="equals" class="yellow operator">=</button>
             </div>
         </div>
     </div>
