--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="buttons">
             <div class="buttonRows">
                 <button id="AC" class="lightGray clear">AC</button>
-                <button id="plusMinus" class="lightGray operator">+/-</button>
+                <button id="DeleteLastDigit" class="lightGray operator">d</button>
                 <button id="modulo" class="lightGray operator">%</button>
                 <button id="divide" class="yellow operator">&#247</button>
             </div>
